<resources>
    <string name="app_name">mobile-revis</string>
    <string name="action_settings">Settings</string>
    <string name="TitleInicialStr">Mobile-Revis</string>
    <string name="LoginBttInicialStr">Login</string>
    <string name="RegisterBttIncialStr">Register</string>
    <string name="title_activity_list_sr">ListSRActivity</string>
    <string name="TitleListStr">Systematic Review</string>
    <string name="title_activity_create_sr">CreateSRActivity</string>
    <string name="TitleCreateStr">Create Systematic Review</string>
    <string name="title_activity_register_r">RegisterRActivity</string>
    <string name="TitleRegisterStr">Register</string>
    <string name="InclusionCriteriaBttStr">Add Inclusion Criteria</string>
    <string name="ExclusionCriteriaBttStr">Add Exclusion Criteria</string>
    <string name="CriteriaHintStr">Criteria</string>
    <string name="ReviewersHintStr">New participating reviewer</string>
    <string name="ReviewersBttStr">Invite</string>
    <string name="bibHintStr">Add .bib file</string>
    <string name="TitleCreateHintStr">Title</string>
    <string name="ObjectiveCreateHintStr">Objective</string>
    <string name="QuestionsCreateHintStr">Research question</string>
    <string name="NameHintStr">Name</string>
    <string name="EmailHintStr">E-mail</string>
    <string name="PasswordHintStr">Password</string>
    <string name="CPasswordHintStr">Confirm password</string>
    <string name="UniAffiliationHintStr">University affiliation</string>
    <string name="CountryHintStr">Country</string>
    <string name="title_activity_read_sr">ReadSRActivity</string>
    <string name="LoginBttReadStr">Login</string>
    <string name="token">37163664732-2e24qfubnoi9tg33vkm96b6ftujh573o.apps.googleusercontent.com</string>
    <string name="reviewerAddMessage">What is the role of the reviewer?</string>
    <string name="QuestionBttStr">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="HintCommentStr">Comment</string>
    <string name="CommentBttStr">Add comment</string>
    <string name="InclusionBttStr">Include study</string>
    <string name="ExclusionBttStr">Exclude study</string>
    <string name="InclusionCriteriaTextStr">Inclusion criteria</string>
    <string name="ExclusionCriteriaTextStr">Exclusion criteria</string>
    <string name="UndecidedBttStr">Undecided</string>
    <string name="title_activity_update_sr">UpdateSRActivity</string>
</resources>
