<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.laisa.tcc.CreateSRActivity"
    tools:showIn="@layout/activity_create_sr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TitleSR"
        android:hint="@string/TitleCreateHintStr"
        android:textSize="15sp"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ObjectiveSR"
        android:layout_below="@+id/TitleSR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ObjectiveCreateHintStr"
        android:inputType="text"
        android:layout_toLeftOf="@+id/BttObjective"
        android:layout_toStartOf="@+id/BttObjective"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BttObjective"
        android:text="@string/QuestionBttStr"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/ObjectiveSR"
        android:layout_alignRight="@+id/CriteriaSR"
        android:layout_alignEnd="@+id/CriteriaSR"
        android:layout_below="@+id/TitleSR" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionsSR"
        android:layout_below="@+id/ObjectiveSR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/QuestionsCreateHintStr"
        android:inputType="text"
        android:layout_toLeftOf="@+id/BttQuestion"
        android:layout_toStartOf="@+id/BttQuestion"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BttQuestion"
        android:text="@string/QuestionBttStr"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/QuestionsSR"
        android:layout_alignRight="@+id/CriteriaSR"
        android:layout_alignEnd="@+id/CriteriaSR"
        android:layout_below="@+id/ObjectiveSR" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CriteriaSR"
        android:layout_below="@+id/QuestionsSR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/TitleSR"
        android:layout_alignEnd="@+id/TitleSR"
        android:textSize="15sp"
        android:inputType="text"
        android:hint="@string/CriteriaHintStr" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InclusionCriteriaBttStr"
        android:id="@+id/BttInclusionCriteria"
        android:textSize="10dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_below="@+id/CriteriaSR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/BttExclusionCriteria" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExclusionCriteriaBttStr"
        android:id="@+id/BttExclusionCriteria"
        android:textSize="10dp"
        android:layout_below="@+id/CriteriaSR"
        android:layout_toLeftOf="@+id/BttInvite"
        android:layout_toStartOf="@+id/BttInvite" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/relativeListLayout"
        android:layout_below="@+id/BttInclusionCriteria"
        android:layout_weight="1">
        <View android:id="@+id/dummy"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_centerInParent="true"/>
        <ListView
            android:layout_alignRight="@id/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewInclusion"
            android:layout_alignParentLeft="true"
            android:focusableInTouchMode="true" />

        <ListView
            android:layout_alignLeft="@id/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewExclusion"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ReviewersSR"
        android:layout_below="@+id/relativeListLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/BttInvite"
        android:textSize="15sp"

        android:hint="@string/ReviewersHintStr"
        android:layout_toLeftOf="@+id/BttInvite"
        android:layout_toStartOf="@+id/BttInvite"
        android:editable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BttInvite"
        android:text="@string/ReviewersBttStr"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/ReviewersSR"
        android:layout_alignRight="@+id/bibSR"
        android:layout_alignEnd="@+id/bibSR"
        android:layout_below="@+id/relativeListLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bibSR"
        android:layout_below="@+id/ReviewersSR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/TitleSR"
        android:layout_alignEnd="@+id/TitleSR"
        android:textSize="15sp"
        android:hint="@string/bibHintStr"
        android:layout_weight="0"/>

</RelativeLayout>

