<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.laisa.tcc.RegisterRActivity"
    tools:showIn="@layout/activity_register_r">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/aa">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NameRegister"
        android:textSize="15sp"
        android:hint="@string/NameHintStr"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EmailRegister"
        android:layout_below="@+id/NameRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/EmailHintStr"
        android:textSize="15sp"
        android:layout_alignRight="@+id/NameRegister"
        android:layout_alignEnd="@+id/NameRegister"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PasswordRegister"
        android:layout_below="@+id/EmailRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:hint="@string/PasswordHintStr"
        android:layout_alignRight="@+id/EmailRegister"
        android:layout_alignEnd="@+id/EmailRegister"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CPasswordRegister"
        android:layout_below="@+id/PasswordRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/CPasswordHintStr"
        android:textSize="15sp"
        android:layout_alignRight="@+id/PasswordRegister"
        android:layout_alignEnd="@+id/PasswordRegister"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UniAffiation"
        android:layout_below="@+id/CPasswordRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:hint="@string/UniAffiliationHintStr"
        android:layout_alignRight="@+id/CPasswordRegister"
        android:layout_alignEnd="@+id/CPasswordRegister" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CountryRegister"
        android:layout_below="@+id/UniAffiation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/CountryHintStr"
        android:textSize="15sp"
        android:layout_alignRight="@+id/UniAffiation"
        android:layout_alignEnd="@+id/UniAffiation" />

</RelativeLayout>
</ScrollView>