<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laisa.tcc.ReadSRFragment">

    <ScrollView
        android:id="@+id/ScrollView03"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:id="@+id/Layout_central"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="#ffffff"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Title"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/TextTitleSR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="New Text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="Abstract"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/TextAbstractSR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text" />

            <LinearLayout
                android:id="@+id/Layout_baixo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/Comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HintCommentStr" />

                <Button
                    android:id="@+id/BttComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/CommentBttStr" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="6dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"></View>

    <LinearLayout
        android:id="@+id/Layout_direito"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="3"
        android:background="#ffffff"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TextInclusionCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InclusionCriteriaTextStr"
            android:textSize="24sp" />

        <ListView
            android:id="@id/listViewInclusion"
            android:layout_width="match_parent"
            android:layout_height="100dp"></ListView>

        <TextView
            android:id="@+id/TextExclusionCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExclusionCriteriaTextStr"
            android:textSize="24sp" />

        <ListView
            android:id="@id/listViewExclusion"
            android:layout_width="match_parent"
            android:layout_height="100dp"></ListView>


        <Button
            android:id="@+id/BttInclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/InclusionBttStr" />

        <Button
            android:id="@+id/BttExclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ExclusionBttStr" />

        <Button
            android:id="@+id/BttUndecided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/UndecidedBttStr" />
    </LinearLayout>


</LinearLayout>
